# rust_minigrep

./: Cargo.toml
src/: lib.rs  main.rs
